--- a/brand.html
+++ b/brand.html
@@ -17,7 +17,7 @@
         <p class="top_login">
             <em>欢迎来第e商城</em>
             <a href="#" class="e_login">请登录</a>
-            <a href="#" class="e_login">免费注册</a>
+            <a href="land.html" class="e_login">免费注册</a>
         </p>
         <ul class="merchant">
             <li class="center">
@@ -390,7 +390,7 @@
             </li>
         </ul>
         <div class="join_in">
-          <a href="#">立即入驻</a>
+          <a href="land.html">立即入驻</a>
         </div>
     </div>  
 </div>
