--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="top_login">
             <em>欢迎来第e商城</em>
             <a href="#" class="e_login">请登录</a>
-            <a href="#" class="e_login">免费注册</a>
+            <a href="land.html" class="e_login">免费注册</a>
         </p>
         <ul class="merchant">
             <li class="center">
@@ -337,7 +337,7 @@
         </div>
     </div>
 </div>
-<div class="dialog_box box_overlay" style="width:1190px; z-index:9999999; left:365px; top:240px; display:none" id="close">
+<div class="dialog_box box_overlay" style="width:1190px; z-index:9999999; left:20%; top:20%; display:none" id="close">
     <a href="#" class="dialog_close">
         <span class="dialog_span"></span>
     </a>
