--- a/normal.html
+++ b/normal.html
@@ -25,7 +25,7 @@ window.onload = function() {
         <p class="top_login">
             <em>欢迎来第e商城</em>
             <a href="#" class="e_login">请登录</a>
-            <a href="#" class="e_login">免费注册</a>
+            <a href="land.html" class="e_login">免费注册</a>
         </p>
         <ul class="merchant">
             <li class="center">
